# advent-of-code-wim

./: .pytest.ini  LICENSE  README.md  README.rst  pyproject.toml  setup.py
.github/actions/: publish.yml
.github/workflows/: publish.yml  tag.yml  test.yml  tests.yml
aoc/: __init__.py  astar.py  ocr.py  stuff.py
aoc2015/: __init__.py  q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q20.py  q21.py  q22.py  q23.py  q24.py  q25.py
aoc2016/: __init__.py  q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q20.py  q21.py  q22.py  q23.py  q24.py  q25.py
aoc2017/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q08_crazy.py  q09.py  q10.py  q11.py  q12.py  q12_quadratic.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q20.py  q21.py  q22.py  q23.py  q24.py  q25.py
aoc2018/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q20.py  q21.py  q22.py  q23.py  q23b_pulp.py  q23b_z3.py  q24.py  q25.py
aoc_wim/: __init__.py  astar.py  autoparse.py  cli.py  hexgrid.py  ocr.py  search.py  stuff.py  util.py  zgrid.py
aoc_wim/aoc2015/: q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q20.py  q21.py  q22.py  q23.py  q24.py  q25.py
aoc_wim/aoc2016/: __init__.py  q01.py  q02.py  q03.py  q04.py  q05.py  q05_single_core.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py  q13.py  q14.py  q14_single_core.py  q15.py  q16.py  q17.py  q18.py  q19.py  q20.py  q21.py  q22.py  q23.py  q24.py  q25.py
aoc_wim/aoc2017/: __init__.py  q01.py  q02.py  q03.py  (+26 more)
tests/: conftest.py  test_a_maze_of_twisty_trampolines_all_alike.py  test_asm.py  test_balance_bots.py  test_corporate_policy.py  test_crab_combat.py  test_cubicle_maze.py  test_dragon_checksum.py  test_examples.py  test_fractal_art.py  test_knot_hash.py  test_like_a_gif_for_your_yard.py  test_reindeer_olympics.py  test_rogue.py  test_rpg_simulator.py  test_scrambler.py  test_some_assembly_required.py  test_spiral_gen.py  test_sporifica_virus.py  test_two_factor_authentication.py
(+898 files in other folders)
